--- a/_scss/components/_header.scss
+++ b/_scss/components/_header.scss
@@ -34,6 +34,7 @@
     font-weight: bold;
     padding: $size-base 0;
     color: $red;
+    text-decoration: none;
     text-transform: uppercase;
     letter-spacing: 0.1rem;
 
