--- a/_scss/layouts/case_study.scss
+++ b/_scss/layouts/case_study.scss
@@ -74,10 +74,6 @@
 }
 
 .l-case_study {
-  :focus {
-    outline: 0;
-  }
-
   .g-row--bleed {
     padding-right: 1rem;
 
